--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -64,11 +64,14 @@
       </div>
 
       <div id="cats">
-        <%= render @cats %>
-      </div>
+        <%# 今のページの`<turbo-frame>` %>
+        <%= turbo_frame_tag "cats-page-#{@cats.current_page}" do %>
+          <%# 今のページで取得したCat一覧 %>
+          <%= render @cats %>
 
-      <div class="d-flex justify-content-end mt-3">
-        <%= paginate @cats %>
+          <%# 遅延読み込みで次ページを取得する`<turbo-frame>` %>
+          <%= turbo_frame_tag "cats-page-#{@cats.next_page}", loading: :lazy, src: path_to_next_page(@cats) %>
+        <% end %>
       </div>
     <% end %>
   </div>
